--- a/Atividades/OrdenarSC/index.html
+++ b/Atividades/OrdenarSC/index.html
@@ -7,16 +7,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --brand:#ff6b00; --ok:#2e7d32; --warn:#c62828; --bg:#fff9f3 url('/hannahenglishcourse/imagens/fundos/fundo-jogos.png') center/cover fixed; --ink:#222;
+      --brand:#ff6b00; --ok:#2e7d32; --warn:#c62828; --bg:#fff9f3; --ink:#222;
       --slot:#ffffff; --slot-border:#bbb; --tile:#fff; --tile-border:#333;
       --shadow: 0 6px 18px rgba(0,0,0,.08);
     }
     *{ box-sizing:border-box }
-    html,body{ height:100% }
-    body{
-      margin:0; background:var(--bg); color:var(--ink);
-      font-family:'Atkinson Hyperlegible', system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      display:flex; flex-direction:column; min-height:100vh;
+    html,body { 
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin-top: 50px;
+      background-color: #f5f5f5;
+      background-image: url('../../../imagens/fundo.png');
+      background-repeat: repeat;
+      background-size: auto;
+      padding: 0 20px;
     }
     header{
       padding:12px 16px; display:flex; align-items:center; gap:12px;
