--- a/Atividades/OrdenarSC/index.html
+++ b/Atividades/OrdenarSC/index.html
@@ -349,9 +349,11 @@
       const key = storageKey(state.meta);
 
       // Tenta resolver base absoluta e relativa
-      const absBase = `/hannahenglishcourse/${state.meta.level}/${state.meta.unit}/DataStory/images/`;
       const relBase = `../../${state.meta.level}/${state.meta.unit}/DataStory/images/`;
-      const base = await probeBase([absBase, relBase]);
+      const rootBase = `/${state.meta.level}/${state.meta.unit}/DataStory/images/`;
+      const base = await probeBase([relBase, rootBase]);
+      // dica rápida no título
+      qs('#crumbs').setAttribute('title', 'Imagens em: ' + base);
 
       // Carregar imagens sequenciais imagem1.png ... imagemN.png
       state.frames = await loadSequentialImages(base, 1, 30); // até 30 por segurança
