--- a/Atividades/OrdenarSC/index.html
+++ b/Atividades/OrdenarSC/index.html
@@ -349,10 +349,7 @@
       const key = storageKey(state.meta);
 
       // Tenta resolver base absoluta e relativa
-      const relBase = `../../${state.meta.level}/${state.meta.unit}/DataStory/images/`;
-      const rootBase = `/${state.meta.level}/${state.meta.unit}/DataStory/images/`;
-      const base = await probeBase([relBase, rootBase]);
-      // dica rápida no título
+      const base = `/${state.meta.level}/${state.meta.unit}/DataStory/images/`;
       qs('#crumbs').setAttribute('title', 'Imagens em: ' + base);
 
       // Carregar imagens sequenciais imagem1.png ... imagemN.png
